# electromagnetism

./: AGENT.md  Cargo.toml  README.md
src/: capacitance.rs  constants.rs  electrostatics.rs  lib.rs  lorentz.rs  magnetostatics.rs  materials.rs  maxwell.rs  potential.rs  vector.rs  waves.rs
