[package]
name = "electromagnetism"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Electromagnetism in Rust — Maxwell's equations, electrostatics, magnetostatics, EM waves, Lorentz force"
repository = "https://github.com/SuperInstance/electromagnetism"

[dependencies]
nalgebra = { version = "0.33", features = ["serde-serialize"] }
serde = { version = "1", features = ["derive"] }
